# gemma-forge

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
config/: dashboard.yaml  harness-smoke-reboot.yaml  harness-smoke.yaml  harness.smoke.yaml  harness.yaml  models.yaml
docs/: about.md  adding-a-skill.md  brief.md  deferred.md  host-setup.md  index.md
docs/adr/: 0001-vllm-not-nim-or-ollama.md  0002-google-adk-loopagent.md  0003-podman-primary-docker-compatible.md  0004-opentofu-not-terraform.md  0005-rocky-9-as-rhel-stand-in.md  0006-disa-stig-profile-not-cis.md  0007-otel-jaeger-prometheus-grafana.md  0012-data-host-layout-convention.md  0013-one-triton-per-l4-no-nvlink.md  0014-triton-vllm-director-shared-host-service.md  0015-gemma-4-model-lineup.md  0016-graphiti-neo4j-postgres-memory-stack.md
docs/journal/: STYLE.md
docs/journal/architecture/: 00-system-architecture.md  01-reflexive-agent-harness-failure-modes.md
docs/journal/futures/: harness-as-training-data-factory.md  index.md
docs/journal/gotchas/: adk-future-annotations.md  agent-instructions-tool-calling.md  apparmor-libvirt.md  clutch-not-wired.md  context-window-edge.md  grub-acpi-apic.md  index.md  libvirt-provider-v09-migration.md  nemotron-tool-parser.md  nemotron-tp-tiling-error.md  nvfp4-vram-math.md  otel-spanmetrics-connector.md  shared-memory-db.md  transformers-gemma4.md  triton-vllm-version.md  vllm-tool-call-parser.md
docs/journal/improvements/: 01-architect-reengagement.md  02-worker-single-action-enforcement.md  (+6 more)
docs/research/: cve-agent-landscape-2026-04.md
gemma_forge/: __init__.py  cli.py
gemma_forge/dream/: pass_.py
gemma_forge/harness/: agents.py  clutch.py  db.py  interfaces.py  loop.py  memory_store.py  ordering.py  ralph.py  run_logger.py  task_graph.py
gemma_forge/memory/: __init__.py  eviction.py  reflector_parser.py  retrieval.py  tip_writer.py
gemma_forge/models/: vllm_llm.py
gemma_forge/observability/: otel.py
gemma_forge/skills/: base.py  loader.py
infra/memory/: README.md
infra/observability/: otel-collector-config.yaml  prometheus.yml
infra/triton/: README.md
infra/vllm/: Dockerfile
infra/vm/: config.env.example
migrations/cve/: 0001_base_schema.sql  0002_bans_table.sql  0003_tips_schema.sql  0004_tip_mechanism.sql  0005_dream_guard.sql
migrations/stig/: 0001_base_schema.sql  0002_bans_table.sql  0003_tips_schema.sql  0004_tip_mechanism.sql  0005_dream_guard.sql
skills/crypto-recovery/: skill.yaml
skills/cve-response/: DESIGN.md  runtime.py  skill.yaml
skills/log-triage/: skill.yaml
skills/network-reconfig/: skill.yaml
skills/rotate-ssh-keys/: skill.yaml
skills/service-recovery/: skill.yaml
skills/stig-rhel9/: runtime.py  skill.yaml
tests/: PLAN.md  conftest.py  test_agent_behavior.py  test_architect_verdict_parsing.py  test_eviction.py  test_harness_fault_paths.py  test_harness_helpers.py  test_loop_integration.py  test_memory_and_clutch.py  test_ordering.py  test_reflector_parser.py  test_retrieval.py  test_smoke.py  test_target_layer.py  test_task_graph.py  test_v4_interfaces.py
tools/: apply_migrations.sh  backfill_tips_from_lessons.py  bootstrap_database.sh  bootstrap_skill.sh  evict_tips.py  graphiti_init.py  migrate_sqlite_to_postgres.py  run_dream_pass.py  seed_reflective_from_runs.py  smoke_memory_e2e.py  smoke_v2_events.py
web/api/: serve_replay.py
web/ui/: next.config.ts  package-lock.json  package.json
(+126 files in other folders)
